test/sema/typeck/expr/call/function-infer-type-argument.dora
fn identity[T](value: T): T { value }

fn f() {
    identity[_](unknown);
    identity[(_, _)](unknownTuple);
}
